@@ -1,8 +1,12 @@
 x11proto-input (1.4.4-1) UNRELEASED; urgency=low
 
+  [ Timo Aaltonen ]
   * New upstream release.
   * Switch to running autoreconf at build time, and build-depend on automake,
     libtool and xutils-dev.
+
+  [ Julien Cristau ]
+  * debian/rules: allow parallel builds.
 
  -- Timo Aaltonen <tepsipakki@ubuntu.com>  Fri, 15 Aug 2008 15:27:35 +0300
 
